force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/BIPT_Chile_sell_out_Inventory__c.object-meta.xml
<CustomObject>
    <label>BIPT Chile sell out Inventory</label>
    <nameField>
        <displayFormat>BIPT-{0000000}</displayFormat>
        <label>BIPT Chile sell out Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BIPT Chile sell out Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>