force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/act_price_lcc__c.field-meta.xml
<CustomField>
    <fullName>act_price_lcc__c</fullName>
    <description>实际销售单价_本位币</description>
    <inlineHelpText>实际销售单价_本位币</inlineHelpText>
    <label>act_price_lcc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>