force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/act_price_rmb__c.field-meta.xml
<CustomField>
    <fullName>act_price_rmb__c</fullName>
    <description>实际销售单价_人民币</description>
    <inlineHelpText>实际销售单价_人民币</inlineHelpText>
    <label>act_price_rmb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>