force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/act_price_usd__c.field-meta.xml
<CustomField>
    <fullName>act_price_usd__c</fullName>
    <description>实际销售单价_美元</description>
    <inlineHelpText>实际销售单价_美元</inlineHelpText>
    <label>act_price_usd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>