force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/act_qty__c.field-meta.xml
<CustomField>
    <fullName>act_qty__c</fullName>
    <description>实际销售数量</description>
    <inlineHelpText>实际销售数量</inlineHelpText>
    <label>act_qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>