force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/avl_soh__c.field-meta.xml
<CustomField>
    <fullName>avl_soh__c</fullName>
    <description>可用库存数量</description>
    <inlineHelpText>可用库存数量</inlineHelpText>
    <label>avl_soh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>