force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/avl_soh_lcc__c.field-meta.xml
<CustomField>
    <fullName>avl_soh_lcc__c</fullName>
    <description>库存金额_本位币</description>
    <inlineHelpText>库存金额_本位币</inlineHelpText>
    <label>avl_soh_lcc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>