force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/avl_soh_usd__c.field-meta.xml
<CustomField>
    <fullName>avl_soh_usd__c</fullName>
    <description>可用库存金额_美元</description>
    <inlineHelpText>可用库存金额_美元</inlineHelpText>
    <label>avl_soh_usd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>