force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <description>品牌</description>
    <inlineHelpText>品牌</inlineHelpText>
    <label>brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>