force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/ch_store_name__c.field-meta.xml
<CustomField>
    <fullName>ch_store_name__c</fullName>
    <description>渠道门店名称</description>
    <inlineHelpText>渠道门店名称</inlineHelpText>
    <label>ch_store_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>