force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/channel_model__c.field-meta.xml
<CustomField>
    <fullName>channel_model__c</fullName>
    <description>渠道命名型号</description>
    <inlineHelpText>渠道命名型号</inlineHelpText>
    <label>channel_model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>