force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/create_week__c.field-meta.xml
<CustomField>
    <fullName>create_week__c</fullName>
    <description>创建周</description>
    <inlineHelpText>创建周</inlineHelpText>
    <label>create_week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>