force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/cust_name__c.field-meta.xml
<CustomField>
    <fullName>cust_name__c</fullName>
    <inlineHelpText>客户名称</inlineHelpText>
    <label>cust_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>