force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/cust_no__c.field-meta.xml
<CustomField>
    <fullName>cust_no__c</fullName>
    <description>渠道编码</description>
    <inlineHelpText>渠道编码</inlineHelpText>
    <label>cust_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>