force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/dsource__c.field-meta.xml
<CustomField>
    <fullName>dsource__c</fullName>
    <label>dsource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>