force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/export_model__c.field-meta.xml
<CustomField>
    <fullName>export_model__c</fullName>
    <description>出口型号</description>
    <inlineHelpText>出口型号</inlineHelpText>
    <label>export_model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>