force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/fac_model__c.field-meta.xml
<CustomField>
    <fullName>fac_model__c</fullName>
    <description>工厂型号</description>
    <inlineHelpText>工厂型号</inlineHelpText>
    <label>fac_model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>