force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/load_dt__c.field-meta.xml
<CustomField>
    <fullName>load_dt__c</fullName>
    <description>加载日期</description>
    <inlineHelpText>加载日期</inlineHelpText>
    <label>load_dt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>