force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/onln_offln__c.field-meta.xml
<CustomField>
    <fullName>onln_offln__c</fullName>
    <description>线上/线下</description>
    <inlineHelpText>线上/线下</inlineHelpText>
    <label>onln_offln</label>
    <length>255</length>
    <type>Text</type>
</CustomField>