force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/prdln__c.field-meta.xml
<CustomField>
    <fullName>prdln__c</fullName>
    <description>产品线</description>
    <inlineHelpText>产品线</inlineHelpText>
    <label>prdln</label>
    <length>255</length>
    <type>Text</type>
</CustomField>