force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>BIPT Chile sell out Inventory</relationshipLabel>
    <relationshipName>BIPT_Chile_sell_out_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>