force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/sgmt__c.field-meta.xml
<CustomField>
    <fullName>sgmt__c</fullName>
    <description>尺寸段</description>
    <inlineHelpText>尺寸段</inlineHelpText>
    <label>sgmt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>