force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/st_intr__c.field-meta.xml
<CustomField>
    <fullName>st_intr__c</fullName>
    <description>在途库存量</description>
    <inlineHelpText>在途库存量</inlineHelpText>
    <label>st_intr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>