force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/stock_on_order__c.field-meta.xml
<CustomField>
    <fullName>stock_on_order__c</fullName>
    <description>订单占用库存数量</description>
    <inlineHelpText>订单占用库存数量</inlineHelpText>
    <label>stock_on_order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>