force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>BIPT Chile sell out Inventory</relationshipLabel>
    <relationshipName>BIPT_Chile_sell_out_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>