force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/store_no__c.field-meta.xml
<CustomField>
    <fullName>store_no__c</fullName>
    <description>门店编码</description>
    <inlineHelpText>门店编码</inlineHelpText>
    <label>store_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>