force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/sub_prdln__c.field-meta.xml
<CustomField>
    <fullName>sub_prdln__c</fullName>
    <description>二级产品线</description>
    <inlineHelpText>二级产品线</inlineHelpText>
    <label>sub_prdln</label>
    <length>255</length>
    <type>Text</type>
</CustomField>