force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/sz__c.field-meta.xml
<CustomField>
    <fullName>sz__c</fullName>
    <description>尺寸</description>
    <inlineHelpText>尺寸</inlineHelpText>
    <label>sz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>