force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/tar_amt_lcc__c.field-meta.xml
<CustomField>
    <fullName>tar_amt_lcc__c</fullName>
    <description>目标销售金额_本位币</description>
    <inlineHelpText>目标销售金额_本位币</inlineHelpText>
    <label>tar_amt_lcc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>