force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/tar_amt_rmb__c.field-meta.xml
<CustomField>
    <fullName>tar_amt_rmb__c</fullName>
    <description>目标销售金额_人民币</description>
    <inlineHelpText>目标销售金额_人民币</inlineHelpText>
    <label>tar_amt_rmb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>