force-app/main/default/objects/BIPT_Chile_sell_out_Inventory__c/fields/tar_qty__c.field-meta.xml
<CustomField>
    <fullName>tar_qty__c</fullName>
    <description>目标销售数量</description>
    <inlineHelpText>目标销售数量</inlineHelpText>
    <label>tar_qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>